# qtc-sdk-cpp

./: CMakeLists.txt  LICENSE  QtC-VC11.sln  README.md
QtC/: QtC.h
QtC/Common/: Any.h  Base64.cpp  Base64.h  HttpConnection.cpp  HttpConnection.h  JSON.cpp  JSON.h  JSONGrammar.cpp  JSONGrammar.h  JSONGrammar.y  JSONLexer.cpp  JSONLexer.l  URI.cpp  URI.h
QtC/EDS/: Collection.cpp  Collection.h  Config.h  EDS.cpp  EDS.h  EDSPrivate.h
QtC/MWS/: MWS.h
Tests/: TestingEDS.cpp  TestingHttpRequest.cpp  TestingMWS.cpp  TestingWSBroadcastClient.cpp  TestingWSBroadcastServer.cpp  TestingWSEchoServer.cpp
Windows/VC11/Libraries/QtC_Cpp/: QtC_Cpp.vcxproj  QtC_Cpp.vcxproj.filters  ReadMe.txt  stdafx.cpp
